--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,6 +7,12 @@ on:
   pull_request:
     branches:
       - main
+  workflow_dispatch:
+    inputs:
+      example_input:
+        description: 'An example input for the workflow'
+        required: false
+        default: 'default_value'
 
 jobs:
   terraform:
